z-index correction

--- a/components/common/Navbar/NavbarLocaleSelect.module.css
+++ b/components/common/Navbar/NavbarLocaleSelect.module.css
@@ -16,7 +16,7 @@
 }
 
 .dropdown {
-  @apply absolute mt-1 right-0 overflow-auto rounded-md bg-white dark:bg-slate-800 py-2 shadow;
+  @apply absolute z-10 mt-1 right-0 overflow-auto rounded-md bg-white dark:bg-slate-800 py-2 shadow;
 }
 
 .item {
