--- a/components/ui/Tooltip/Tooltip.module.css
+++ b/components/ui/Tooltip/Tooltip.module.css
@@ -1,3 +1,3 @@
 .tooltip {
-  @apply absolute shadow mt-1 bg-gray-900 dark:bg-slate-800 text-white dark:text-slate-200 text-xs leading-6 font-normal px-2 py-1 rounded-md opacity-90 whitespace-nowrap;
+  @apply absolute z-20 shadow mt-1 bg-gray-900 dark:bg-slate-800 text-white dark:text-slate-200 text-xs leading-6 font-normal px-2 py-1 rounded-md opacity-90 whitespace-nowrap;
 }
